[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Objects/OrbSwitch.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Props/Orb switch.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Props/Orb switch on.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Objects/Switch.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 5, 3 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 4, 4 )

[node name="OrbSwitch" type="StaticBody2D" groups=[
"OrbSwitch",
]]

position = Vector2( 28, 38 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
one_shot = true
time = 0
allow_bow = true
target_flag = "null"
reemit_signal = null

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "off"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 4 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

modulate = Color( 0.429382, 0, 0.785156, 1 )
position = Vector2( 0, -2 )
shape = SubResource( 3 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="SoundPressed" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = -6.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="TimerReemitSignal" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[connection signal="timeout" from="TimerReemitSignal" to="." method="_on_TimerReemitSignal_timeout"]


